Added control of order that messages are written in MailBOX for sending by CAN.

--- a/platformio.ini
+++ b/platformio.ini
@@ -28,13 +28,13 @@ lib_deps =
   LiquidCrystal
   TMCStepper@>=0.6.2,<1.0.0
   Adafruit NeoPixel
-  U8glib-HAL=https://github.com/MarlinFirmware/U8glib-HAL/archive/bugfix.zip
-  Adafruit_MAX31865=https://github.com/adafruit/Adafruit_MAX31865/archive/master.zip
-  LiquidTWI2=https://github.com/lincomatic/LiquidTWI2/archive/master.zip
-  Arduino-L6470=https://github.com/ameyer/Arduino-L6470/archive/0.8.0.zip
-  SailfishLCD=https://github.com/mikeshub/SailfishLCD/archive/master.zip
-  SailfishRGB_LED=https://github.com/mikeshub/SailfishRGB_LED/archive/master.zip
-  SlowSoftI2CMaster=https://github.com/mikeshub/SlowSoftI2CMaster/archive/master.zip
+#  U8glib-HAL=https://github.com/MarlinFirmware/U8glib-HAL/archive/bugfix.zip
+#  Adafruit_MAX31865=https://github.com/adafruit/Adafruit_MAX31865/archive/master.zip
+#  LiquidTWI2=https://github.com/lincomatic/LiquidTWI2/archive/master.zip
+#  Arduino-L6470=https://github.com/ameyer/Arduino-L6470/archive/0.8.0.zip
+#  SailfishLCD=https://github.com/mikeshub/SailfishLCD/archive/master.zip
+#  SailfishRGB_LED=https://github.com/mikeshub/SailfishRGB_LED/archive/master.zip
+#  SlowSoftI2CMaster=https://github.com/mikeshub/SlowSoftI2CMaster/archive/master.zip
 
 # Globally defined properties
 # inherited by all environments
@@ -756,7 +756,7 @@ platform      = teensy
 board         = teensy40
 lib_deps      = ${common.lib_deps}
   TMC26XStepper=https://github.com/trinamic/TMC26XStepper/archive/master.zip
-  https://github.com/tonton81/FlexCAN_T4.git
+  FlexCAN_T4=https://github.com/tonton81/FlexCAN_T4.git
 #lib_ignore    = Adafruit NeoPixel
 src_filter    = ${common.default_src_filter} +<src/HAL/TEENSY40>
 monitor_speed = 115200
